// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GeneratedWebsocketSocketClassImpl > websocketHandlerMode=accumulate > matches snapshot with serde layer 1`] = `
"export declare namespace ChatSocket {
    export interface Args {
        socket: ReconnectingWebSocket;
    }

    export type Response = string;
    type EventHandlers = {
            open?: () => void;
            message?: (message: Response) => void;
            close?: (event: CloseEvent) => void;
            error?: (error: Error) => void;
        };
}

export class ChatSocket {
    public readonly socket: ReconnectingWebSocket;
    protected readonly eventHandlers: { [K in keyof ChatSocket.EventHandlers]-?: Array<NonNullable<ChatSocket.EventHandlers[K]>> } = { open: [], message: [], close: [], error: [] };
    private handleOpen: () => void = () => {
                for (const handler of [...this.eventHandlers.open]) { handler(); }
            };
    private handleMessage: (event: { data: string }) => void = event => {
                const data = fromJson(event.data);
            
            const parsedResponse = responseSchema.parse(data);
            if (parsedResponse.ok) {
                for (const handler of [...this.eventHandlers.message]) { handler(parsedResponse.value); }
            } else {
                for (const handler of [...this.eventHandlers.error]) { handler(new Error("Received unknown message type")); }
            }
            };
    private handleClose: (event: CloseEvent) => void = event => {
                for (const handler of [...this.eventHandlers.close]) { handler(event); }
            };
    private handleError: (event: ErrorEvent) => void = event => {
                const message = event.message;
                for (const handler of [...this.eventHandlers.error]) { handler(new Error(message)); }
            };

    constructor(args: ChatSocket.Args) {
        this.socket = args.socket;
        this.socket.addEventListener("open", this.handleOpen);
        this.socket.addEventListener("message", this.handleMessage);
        this.socket.addEventListener("close", this.handleClose);
        this.socket.addEventListener("error", this.handleError);
    }

    /** The current state of the connection; this is one of the readyState constants. */
    get readyState(): ReconnectingWebSocket.ReadyState {
        return this.socket.readyState;
    }

    /**
     * @param event - The event to attach to.
     * @param callback - The callback to run when the event is triggered.
     * Handlers accumulate: registering another callback for the same event does not replace
     * the previous one. Handlers run in registration order.
     * Usage:
     * \`\`\`typescript
     * this.on('open', () => {
     *     console.log('The websocket is open');
     * });
     * \`\`\`
     */
    public on<T extends keyof ChatSocket.EventHandlers>(event: T, callback: NonNullable<ChatSocket.EventHandlers[T]>): void {
        const handlers = this.eventHandlers[event] as Array<NonNullable<ChatSocket.EventHandlers[T]>>;
        handlers.push(callback);
    }

    /**
     * @param event - The event to detach from.
     * @param callback - The callback previously registered with \`on\`. No-op if it is not registered for this event.
     * Usage:
     * \`\`\`typescript
     * const handler = () => console.log('The websocket is open');
     * this.on('open', handler);
     * this.off('open', handler);
     * \`\`\`
     */
    public off<T extends keyof ChatSocket.EventHandlers>(event: T, callback: NonNullable<ChatSocket.EventHandlers[T]>): void {
        const handlers = this.eventHandlers[event] as Array<NonNullable<ChatSocket.EventHandlers[T]>>;
        const index = handlers.lastIndexOf(callback);
        if (index !== -1) {
            handlers.splice(index, 1);
        }
    }

    public sendSendMessage(message: string): void {
        this.assertSocketIsOpen();
        const jsonPayload = schema.jsonOrThrow(message);
        this.socket.send(JSON.stringify(jsonPayload));
    }

    /** Connect to the websocket and register event handlers. */
    public connect(): ChatSocket {
        this.socket.reconnect();
        
        this.socket.addEventListener("open", this.handleOpen);
        this.socket.addEventListener("message", this.handleMessage);
        this.socket.addEventListener("close", this.handleClose);
        this.socket.addEventListener("error", this.handleError);
        
        return this;
    }

    /** Close the websocket and unregister event handlers. */
    public close(): void {
        this.socket.close();
        
        this.handleClose({ code: 1000 } as CloseEvent);
        
        this.socket.removeEventListener("open", this.handleOpen);
        this.socket.removeEventListener("message", this.handleMessage);
        this.socket.removeEventListener("close", this.handleClose);
        this.socket.removeEventListener("error", this.handleError);
    }

    /** Returns a promise that resolves when the websocket is open. */
    public async waitForOpen(): Promise<ReconnectingWebSocket> {
        if (this.socket.readyState === ReconnectingWebSocket.ReadyState.OPEN) {
            return this.socket;
        }

        return new Promise((resolve, reject) => {
            this.socket.addEventListener("open", () => {
                resolve(this.socket);
            });
        
            this.socket.addEventListener("error", (event: unknown) => {
                reject(event);
            });
        });
    }

    /** Asserts that the websocket is open. */
    private assertSocketIsOpen(): void {
        if (!this.socket) {
            throw new Error("Socket is not connected.");
        }

        

        if (this.socket.readyState !== ReconnectingWebSocket.ReadyState.OPEN) {
            throw new Error("Socket is not open.");
        }
    }

    /** Send a binary payload to the websocket. */
    protected sendBinary(payload: ArrayBuffer | Blob | ArrayBufferView): void {
        this.socket.send(payload);
    }
}
"
`;

exports[`GeneratedWebsocketSocketClassImpl > websocketHandlerMode=accumulate > matches snapshot without serde layer 1`] = `
"export declare namespace ChatSocket {
    export interface Args {
        socket: ReconnectingWebSocket;
    }

    export type Response = string;
    type EventHandlers = {
            open?: () => void;
            message?: (message: Response) => void;
            close?: (event: CloseEvent) => void;
            error?: (error: Error) => void;
        };
}

export class ChatSocket {
    public readonly socket: ReconnectingWebSocket;
    protected readonly eventHandlers: { [K in keyof ChatSocket.EventHandlers]-?: Array<NonNullable<ChatSocket.EventHandlers[K]>> } = { open: [], message: [], close: [], error: [] };
    private handleOpen: () => void = () => {
                for (const handler of [...this.eventHandlers.open]) { handler(); }
            };
    private handleMessage: (event: { data: string }) => void = event => {
                const data = fromJson(event.data);
            
            for (const handler of [...this.eventHandlers.message]) { handler(data as ChatSocket.Response); }
            };
    private handleClose: (event: CloseEvent) => void = event => {
                for (const handler of [...this.eventHandlers.close]) { handler(event); }
            };
    private handleError: (event: ErrorEvent) => void = event => {
                const message = event.message;
                for (const handler of [...this.eventHandlers.error]) { handler(new Error(message)); }
            };

    constructor(args: ChatSocket.Args) {
        this.socket = args.socket;
        this.socket.addEventListener("open", this.handleOpen);
        this.socket.addEventListener("message", this.handleMessage);
        this.socket.addEventListener("close", this.handleClose);
        this.socket.addEventListener("error", this.handleError);
    }

    /** The current state of the connection; this is one of the readyState constants. */
    get readyState(): ReconnectingWebSocket.ReadyState {
        return this.socket.readyState;
    }

    /**
     * @param event - The event to attach to.
     * @param callback - The callback to run when the event is triggered.
     * Handlers accumulate: registering another callback for the same event does not replace
     * the previous one. Handlers run in registration order.
     * Usage:
     * \`\`\`typescript
     * this.on('open', () => {
     *     console.log('The websocket is open');
     * });
     * \`\`\`
     */
    public on<T extends keyof ChatSocket.EventHandlers>(event: T, callback: NonNullable<ChatSocket.EventHandlers[T]>): void {
        const handlers = this.eventHandlers[event] as Array<NonNullable<ChatSocket.EventHandlers[T]>>;
        handlers.push(callback);
    }

    /**
     * @param event - The event to detach from.
     * @param callback - The callback previously registered with \`on\`. No-op if it is not registered for this event.
     * Usage:
     * \`\`\`typescript
     * const handler = () => console.log('The websocket is open');
     * this.on('open', handler);
     * this.off('open', handler);
     * \`\`\`
     */
    public off<T extends keyof ChatSocket.EventHandlers>(event: T, callback: NonNullable<ChatSocket.EventHandlers[T]>): void {
        const handlers = this.eventHandlers[event] as Array<NonNullable<ChatSocket.EventHandlers[T]>>;
        const index = handlers.lastIndexOf(callback);
        if (index !== -1) {
            handlers.splice(index, 1);
        }
    }

    public sendSendMessage(message: string): void {
        this.assertSocketIsOpen();
        this.sendJson(message);
    }

    /** Connect to the websocket and register event handlers. */
    public connect(): ChatSocket {
        this.socket.reconnect();
        
        this.socket.addEventListener("open", this.handleOpen);
        this.socket.addEventListener("message", this.handleMessage);
        this.socket.addEventListener("close", this.handleClose);
        this.socket.addEventListener("error", this.handleError);
        
        return this;
    }

    /** Close the websocket and unregister event handlers. */
    public close(): void {
        this.socket.close();
        
        this.handleClose({ code: 1000 } as CloseEvent);
        
        this.socket.removeEventListener("open", this.handleOpen);
        this.socket.removeEventListener("message", this.handleMessage);
        this.socket.removeEventListener("close", this.handleClose);
        this.socket.removeEventListener("error", this.handleError);
    }

    /** Returns a promise that resolves when the websocket is open. */
    public async waitForOpen(): Promise<ReconnectingWebSocket> {
        if (this.socket.readyState === ReconnectingWebSocket.ReadyState.OPEN) {
            return this.socket;
        }

        return new Promise((resolve, reject) => {
            this.socket.addEventListener("open", () => {
                resolve(this.socket);
            });
        
            this.socket.addEventListener("error", (event: unknown) => {
                reject(event);
            });
        });
    }

    /** Asserts that the websocket is open. */
    private assertSocketIsOpen(): void {
        if (!this.socket) {
            throw new Error("Socket is not connected.");
        }

        

        if (this.socket.readyState !== ReconnectingWebSocket.ReadyState.OPEN) {
            throw new Error("Socket is not open.");
        }
    }

    /** Send a binary payload to the websocket. */
    protected sendBinary(payload: ArrayBuffer | Blob | ArrayBufferView): void {
        this.socket.send(payload);
    }

    /** Send a JSON payload to the websocket. */
    protected sendJson(payload: string): void {
        const jsonPayload = toJson(payload);
        this.socket.send(jsonPayload);
    }
}
"
`;

exports[`GeneratedWebsocketSocketClassImpl > websocketHandlerMode=replace > matches snapshot with serde layer 1`] = `
"export declare namespace ChatSocket {
    export interface Args {
        socket: ReconnectingWebSocket;
    }

    export type Response = string;
    type EventHandlers = {
            open?: () => void;
            message?: (message: Response) => void;
            close?: (event: CloseEvent) => void;
            error?: (error: Error) => void;
        };
}

export class ChatSocket {
    public readonly socket: ReconnectingWebSocket;
    protected readonly eventHandlers: ChatSocket.EventHandlers = {};
    private handleOpen: () => void = () => {
                this.eventHandlers.open?.();
            };
    private handleMessage: (event: { data: string }) => void = event => {
                const data = fromJson(event.data);
            
            const parsedResponse = responseSchema.parse(data);
            if (parsedResponse.ok) {
                this.eventHandlers.message?.(parsedResponse.value);
            } else {
                this.eventHandlers.error?.(new Error("Received unknown message type"));
            }
            };
    private handleClose: (event: CloseEvent) => void = event => {
                this.eventHandlers.close?.(event);
            };
    private handleError: (event: ErrorEvent) => void = event => {
                const message = event.message;
                this.eventHandlers.error?.(new Error(message));
            };

    constructor(args: ChatSocket.Args) {
        this.socket = args.socket;
        this.socket.addEventListener("open", this.handleOpen);
        this.socket.addEventListener("message", this.handleMessage);
        this.socket.addEventListener("close", this.handleClose);
        this.socket.addEventListener("error", this.handleError);
    }

    /** The current state of the connection; this is one of the readyState constants. */
    get readyState(): ReconnectingWebSocket.ReadyState {
        return this.socket.readyState;
    }

    /**
     * @param event - The event to attach to.
     * @param callback - The callback to run when the event is triggered.
     * Usage:
     * \`\`\`typescript
     * this.on('open', () => {
     *     console.log('The websocket is open');
     * });
     * \`\`\`
     */
    public on<T extends keyof ChatSocket.EventHandlers>(event: T, callback: ChatSocket.EventHandlers[T]): void {
        this.eventHandlers[event] = callback;
    }

    /**
     * @param event - The event to detach from.
     * @param callback - The callback previously registered with \`on\`. No-op if it is not the callback currently registered for this event.
     * Usage:
     * \`\`\`typescript
     * const handler = () => console.log('The websocket is open');
     * this.on('open', handler);
     * this.off('open', handler);
     * \`\`\`
     */
    public off<T extends keyof ChatSocket.EventHandlers>(event: T, callback: ChatSocket.EventHandlers[T]): void {
        if (this.eventHandlers[event] === callback) {
            delete this.eventHandlers[event];
        }
    }

    public sendSendMessage(message: string): void {
        this.assertSocketIsOpen();
        const jsonPayload = schema.jsonOrThrow(message);
        this.socket.send(JSON.stringify(jsonPayload));
    }

    /** Connect to the websocket and register event handlers. */
    public connect(): ChatSocket {
        this.socket.reconnect();
        
        this.socket.addEventListener("open", this.handleOpen);
        this.socket.addEventListener("message", this.handleMessage);
        this.socket.addEventListener("close", this.handleClose);
        this.socket.addEventListener("error", this.handleError);
        
        return this;
    }

    /** Close the websocket and unregister event handlers. */
    public close(): void {
        this.socket.close();
        
        this.handleClose({ code: 1000 } as CloseEvent);
        
        this.socket.removeEventListener("open", this.handleOpen);
        this.socket.removeEventListener("message", this.handleMessage);
        this.socket.removeEventListener("close", this.handleClose);
        this.socket.removeEventListener("error", this.handleError);
    }

    /** Returns a promise that resolves when the websocket is open. */
    public async waitForOpen(): Promise<ReconnectingWebSocket> {
        if (this.socket.readyState === ReconnectingWebSocket.ReadyState.OPEN) {
            return this.socket;
        }

        return new Promise((resolve, reject) => {
            this.socket.addEventListener("open", () => {
                resolve(this.socket);
            });
        
            this.socket.addEventListener("error", (event: unknown) => {
                reject(event);
            });
        });
    }

    /** Asserts that the websocket is open. */
    private assertSocketIsOpen(): void {
        if (!this.socket) {
            throw new Error("Socket is not connected.");
        }

        

        if (this.socket.readyState !== ReconnectingWebSocket.ReadyState.OPEN) {
            throw new Error("Socket is not open.");
        }
    }

    /** Send a binary payload to the websocket. */
    protected sendBinary(payload: ArrayBuffer | Blob | ArrayBufferView): void {
        this.socket.send(payload);
    }
}
"
`;

exports[`GeneratedWebsocketSocketClassImpl > websocketHandlerMode=replace > matches snapshot without serde layer 1`] = `
"export declare namespace ChatSocket {
    export interface Args {
        socket: ReconnectingWebSocket;
    }

    export type Response = string;
    type EventHandlers = {
            open?: () => void;
            message?: (message: Response) => void;
            close?: (event: CloseEvent) => void;
            error?: (error: Error) => void;
        };
}

export class ChatSocket {
    public readonly socket: ReconnectingWebSocket;
    protected readonly eventHandlers: ChatSocket.EventHandlers = {};
    private handleOpen: () => void = () => {
                this.eventHandlers.open?.();
            };
    private handleMessage: (event: { data: string }) => void = event => {
                const data = fromJson(event.data);
            
            this.eventHandlers.message?.(data as ChatSocket.Response);
            };
    private handleClose: (event: CloseEvent) => void = event => {
                this.eventHandlers.close?.(event);
            };
    private handleError: (event: ErrorEvent) => void = event => {
                const message = event.message;
                this.eventHandlers.error?.(new Error(message));
            };

    constructor(args: ChatSocket.Args) {
        this.socket = args.socket;
        this.socket.addEventListener("open", this.handleOpen);
        this.socket.addEventListener("message", this.handleMessage);
        this.socket.addEventListener("close", this.handleClose);
        this.socket.addEventListener("error", this.handleError);
    }

    /** The current state of the connection; this is one of the readyState constants. */
    get readyState(): ReconnectingWebSocket.ReadyState {
        return this.socket.readyState;
    }

    /**
     * @param event - The event to attach to.
     * @param callback - The callback to run when the event is triggered.
     * Usage:
     * \`\`\`typescript
     * this.on('open', () => {
     *     console.log('The websocket is open');
     * });
     * \`\`\`
     */
    public on<T extends keyof ChatSocket.EventHandlers>(event: T, callback: ChatSocket.EventHandlers[T]): void {
        this.eventHandlers[event] = callback;
    }

    /**
     * @param event - The event to detach from.
     * @param callback - The callback previously registered with \`on\`. No-op if it is not the callback currently registered for this event.
     * Usage:
     * \`\`\`typescript
     * const handler = () => console.log('The websocket is open');
     * this.on('open', handler);
     * this.off('open', handler);
     * \`\`\`
     */
    public off<T extends keyof ChatSocket.EventHandlers>(event: T, callback: ChatSocket.EventHandlers[T]): void {
        if (this.eventHandlers[event] === callback) {
            delete this.eventHandlers[event];
        }
    }

    public sendSendMessage(message: string): void {
        this.assertSocketIsOpen();
        this.sendJson(message);
    }

    /** Connect to the websocket and register event handlers. */
    public connect(): ChatSocket {
        this.socket.reconnect();
        
        this.socket.addEventListener("open", this.handleOpen);
        this.socket.addEventListener("message", this.handleMessage);
        this.socket.addEventListener("close", this.handleClose);
        this.socket.addEventListener("error", this.handleError);
        
        return this;
    }

    /** Close the websocket and unregister event handlers. */
    public close(): void {
        this.socket.close();
        
        this.handleClose({ code: 1000 } as CloseEvent);
        
        this.socket.removeEventListener("open", this.handleOpen);
        this.socket.removeEventListener("message", this.handleMessage);
        this.socket.removeEventListener("close", this.handleClose);
        this.socket.removeEventListener("error", this.handleError);
    }

    /** Returns a promise that resolves when the websocket is open. */
    public async waitForOpen(): Promise<ReconnectingWebSocket> {
        if (this.socket.readyState === ReconnectingWebSocket.ReadyState.OPEN) {
            return this.socket;
        }

        return new Promise((resolve, reject) => {
            this.socket.addEventListener("open", () => {
                resolve(this.socket);
            });
        
            this.socket.addEventListener("error", (event: unknown) => {
                reject(event);
            });
        });
    }

    /** Asserts that the websocket is open. */
    private assertSocketIsOpen(): void {
        if (!this.socket) {
            throw new Error("Socket is not connected.");
        }

        

        if (this.socket.readyState !== ReconnectingWebSocket.ReadyState.OPEN) {
            throw new Error("Socket is not open.");
        }
    }

    /** Send a binary payload to the websocket. */
    protected sendBinary(payload: ArrayBuffer | Blob | ArrayBufferView): void {
        this.socket.send(payload);
    }

    /** Send a JSON payload to the websocket. */
    protected sendJson(payload: string): void {
        const jsonPayload = toJson(payload);
        this.socket.send(jsonPayload);
    }
}
"
`;
